--- a/fe/package.json
+++ b/fe/package.json
@@ -13,17 +13,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "13.3.1",
-    "@angular/cdk": "^13.3.1",
+    "@angular/cdk": "^13.3.9",
     "@angular/common": "^13.3.1",
     "@angular/compiler": "^13.3.1",
     "@angular/core": "^13.3.1",
     "@angular/elements": "^13.3.1",
     "@angular/forms": "^13.3.1",
     "@angular/localize": "13.3.1",
+    "@angular/material": "^13.3.1",
     "@angular/platform-browser": "^13.3.1",
     "@angular/platform-browser-dynamic": "^13.3.1",
     "@angular/router": "^13.3.1",
     "@ng-bootstrap/ng-bootstrap": "12.0.1",
+    "chart.js": "2.9.4",
     "@popperjs/core": "^2.11.4",
     "date-fns": "^2.30.0",
     "jw-bootstrap-switch-ng2": "2.0.5",
