--- a/fe/angular.json
+++ b/fe/angular.json
@@ -28,6 +28,7 @@
             ],
             "styles": [
               "src/styles.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/assets/scss/argon.scss"
             ],
             "scripts": []
@@ -147,7 +148,7 @@
       }
     }
   },
-  "defaultProject": "argon-design-system-angular",
+  "defaultProject": "argon-design-system-angular-master",
   "cli": {
     "analytics": false
   }
