--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,44 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
-
-# compiled output
+compiled output
 /dist
-/dist/hms
+/dist-server
 /tmp
 /out-tsc
 
-# dependencies
+dependencies
 /node_modules
 
-# IDEs and editors
+IDEs and editors
 /.idea
 .project
 .classpath
 .c9/
 *.launch
 .settings/
-*.sublime-workspace
+.sublime-workspace
 
-# IDE - VSCode
-.vscode/*
+IDE - VSCode
+.vscode/
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
 
-# misc
+misc
 /.sass-cache
+/.angular/cache
 /connect.lock
 /coverage
 /libpeerconnection.log
 npm-debug.log
-yarn-error.log
 testem.log
 /typings
-/.angular
 
-# System Files
+e2e
+/e2e/.js
+/e2e/.map
+
+System Files
 .DS_Store
 Thumbs.db
-package-lock.json
+.history/*
+.angular/cache/
