--- a/fe/package.json
+++ b/fe/package.json
@@ -31,6 +31,7 @@
     "chart.js": "2.9.4",
     "date-fns": "^2.30.0",
     "jw-bootstrap-switch-ng2": "2.0.5",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.29.1",
     "ng2-nouislider": "1.8.3",
     "nouislider": "14.6.3",
