--- a/fe/package.json
+++ b/fe/package.json
@@ -34,6 +34,7 @@
     "jwt-decode": "^4.0.0",
     "moment": "^2.29.1",
     "ng2-nouislider": "1.8.3",
+    "ngx-toastr": "^14.3.0",
     "nouislider": "14.6.3",
     "rxjs": "^7.5.5",
     "zone.js": "~0.11.5"
