--- a/fe/package.json
+++ b/fe/package.json
@@ -20,6 +20,7 @@
     "@angular/elements": "^13.3.1",
     "@angular/forms": "^13.3.9",
     "@angular/localize": "13.3.1",
+    "@angular/google-maps": "^13.3.9",
     "@angular/material": "^9.2.3",
     "@angular/platform-browser": "^13.3.1",
     "@angular/platform-browser-dynamic": "^13.3.1",
